[package]
name = "dnd_character_cli"
version = "0.1.0"
about = "A CLI for managing D&D characters"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
color-eyre = "0.6.3"
dialoguer = { version = "0.11.0", features = ["editor"] }
ratatui = "0.27.0"
serde = { version = "1.0.203", features = ["derive"] }
toml = { version = "0.8.14" }
tui-popup = "0.3.3"
